--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link rel="shortcut icon" href="https://SamRough.github.io/blog/images/favicon.png" />
+<link rel="shortcut icon" href="https://SamRough.github.io/images/favicon.png" />
 <title>Hugo ʕ•ᴥ•ʔ Bear | SamRough Blog</title>
 <meta name="title" content="Hugo ʕ•ᴥ•ʔ Bear" />
 <meta name="description" content="Hugo &#43; Bear = :heart:" />
@@ -16,12 +16,12 @@
 <meta property="og:title" content="Hugo ʕ•ᴥ•ʔ Bear" />
 <meta property="og:description" content="Hugo &#43; Bear = :heart:" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://SamRough.github.io/blog/" /><meta property="og:image" content="https://SamRough.github.io/blog/images/share.png" /><meta property="og:site_name" content="Hugo ʕ•ᴥ•ʔ Bear" />
+<meta property="og:url" content="https://SamRough.github.io/" /><meta property="og:image" content="https://SamRough.github.io/images/share.png" /><meta property="og:site_name" content="Hugo ʕ•ᴥ•ʔ Bear" />
 
 
 
 <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:image" content="https://SamRough.github.io/blog/images/share.png" /><meta name="twitter:title" content="Hugo ʕ•ᴥ•ʔ Bear"/>
+<meta name="twitter:image" content="https://SamRough.github.io/images/share.png" /><meta name="twitter:title" content="Hugo ʕ•ᴥ•ʔ Bear"/>
 <meta name="twitter:description" content="Hugo &#43; Bear = :heart:"/>
 
 
@@ -30,7 +30,7 @@
 <meta itemprop="description" content="Hugo &#43; Bear = :heart:">
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
-  <link rel="alternate" type="application/rss+xml" href="https://SamRough.github.io/blog/index.xml" title="SamRough Blog" />
+  <link rel="alternate" type="application/rss+xml" href="https://SamRough.github.io/index.xml" title="SamRough Blog" />
   <style>
   body {
     font-family: Verdana, sans-serif;
@@ -208,13 +208,13 @@
 </head>
 
 <body>
-  <header><a href="/blog/" class="title">
+  <header><a href="/" class="title">
   <h2>SamRough Blog</h2>
 </a>
-<nav><a href="/blog/">Home</a>
+<nav><a href="/">Home</a>
 
 
-<a href="/blog/blog">Blog</a>
+<a href="/blog">Blog</a>
 
 </nav>
 </header>
